--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint src --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006 --no-dll",
-    "build-storybook": "build-storybook --no-dll"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "build": "^0.1.4",
@@ -19,9 +19,7 @@
     "next": "10.1.3",
     "next-pwa": "^5.1.4",
     "react": "17.0.2",
-
     "react-dom": "17.0.2",
-
     "styled-components": "^5.2.3"
   },
   "husky": {
@@ -36,21 +34,20 @@
     ]
   },
   "devDependencies": {
-
     "@babel/core": "^7.13.8",
     "@babel/preset-typescript": "^7.13.0",
-    "@storybook/addon-actions": "^6.2.3",
-    "@storybook/react": "^6.2.2",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.2.3",
+    "@storybook/addon-actions": "^6.2.7",
+    "@storybook/addon-essentials": "^6.2.7",
+    "@storybook/addon-links": "^6.2.7",
+    "@storybook/react": "^6.2.7",
     "@testing-library/jest-dom": "^5.11.9",
-    "@types/jest": "^26.0.20",
     "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/parser": "^4.20.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.18.0",
@@ -60,6 +57,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.1",
     "husky": "^6.0.0",
     "jest": "^26.6.0",
@@ -67,11 +65,9 @@
     "lint-staged": "^10.5.1",
     "prettier": "^2.0.5",
     "pretty-format": "^26.6.0",
-
     "react-is": "^17.0.2",
+    "resolve-url-loader": "^3.1.2",
     "ts-loader": "^8.0.18",
-
-
     "typescript": "^4.2.2"
   }
 }
