--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 -c .storybook watch-css -s ./public",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
