--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "won-front-end",
   "version": "0.1.0",
   "private": true,
+  "main": "../swiper-react.cjs.js",
+  "jsnext:main": "../swiper-react.esm.js",
+  "module": "../swiper-react.esm.js",
+  "typings": "../swiper-react.d.ts",
+  "sideEffects": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -20,7 +25,8 @@
     "next-pwa": "^5.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "swiper": "^6.5.6"
   },
   "husky": {
     "hooks": {
