--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.2.3",
+    "styled-media-query": "^2.1.2",
     "swiper": "^6.5.6"
   },
   "husky": {
