--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-pwa": "^5.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.2.3",
     "styled-media-query": "^2.1.2",
     "swiper": "^6.5.6"
