--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@prismicio/client": "^4.0.0",
     "build": "^0.1.4",
     "date-fns": "^2.20.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "next": "10.1.3",
     "next-pwa": "^5.1.4",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
