--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prismicio/client": "^4.0.0",
+    "@types/prismic-dom": "^2.1.1",
     "build": "^0.1.4",
     "date-fns": "^2.20.2",
     "eslint-plugin-import": "^2.22.1",
